src/test/deca/context/invalid/classextends14.deca

class A {
    int m(){
        return 5;
    }
}

class B extends A {
    int m;
}



